@@ -8,16 +8,25 @@
 #		Claims that somewhere between 0.1-0.3 or even lower is optimal for coomers.
 #			Ok coomers.
 temp = 0.4
+
 #The number of words the AI has to choose from.
 #	It always chooses the "top k" most likely next words before randomly picking one according to temperature.
 #	Low values reduce the randomness of the AI similar to temp.
 #	Claims it might affect performance if too high, seems unlikely.
 topkeks = 20
+
 #literally no idea what this does
 top_p = 0.9
+
 #probably related to the number of words the AI produces at a time? Possibly affects performance.
 generatenum = 60
-#Tensorflow log leve
+
+#dings the console bell when the AI responds
+#	check your terminal emulator's support for console bells if this doesn't work, it should typically buzz the PC speaker
+#	betcha didn't know ASCII supported sound
+consoleBell = on
+
+#Tensorflow log level
 #	seems to give informative messages about what options your CPU and tensorflow install supports. Not sure what a good default should be.
 loglevel = 3
 
