@@ -1,128 +1,0 @@
-settings:
-
-  fantasy:
-    description: "living in the kingdom of Larion. "
-    characters:
-
-      noble:
-        prompts: ["You are awakened by one of your servants who tells you that your keep is under attack. You look out the window and see"]
-
-        item1: "pouch of gold"
-        item2: "small dagger"
-
-      knight:
-        prompts: ["You are on a quest to defeat the evil dragon of Larion. You've heard he lives up at the north of the kingdom. You set on the path to defeat him and walk into a dark forest. As you enter the forest you see"]
-
-        item1: "steel longsword"
-        item2: "wooden shield"
-
-      squire:
-        prompts: ["You follow Sir Theo as he enters the forest, he turns to you and says"]
-
-        item1: "spear"
-        item2: "pack of supplies"
-
-      wizard:
-        prompts: ["You finish your long journey and finally arrive at the ruin you've been looking for. You look around and see"]
-
-        item1: "staff"
-        item2: "spellbook"
-
-      ranger:
-        prompts: ["You spot the deer and are ready to finish your hunt when suddenly"]
-
-        item1: "hunting bow"
-        item2: "quiver of arrows"
-
-      peasant:
-        prompts: ["You wake up and begin working in the fields. You see"]
-
-        item1: "pitchfork"
-        item2: "nothing else"
-
-      rogue:
-        prompts: ["You walk down the city street looking for somehwere to steal from. You look around and see"]
-
-        item1: "long steel dagger"
-        item2: "length of rope"
-
-  mystery:
-    description: "living in Chicago. "
-    characters:
-
-      patient:
-        prompts: ["You wake up in an old rundown hospital with no memory of how you got there. You take a look around the room and see"]
-
-        item1: "hospital bracelet"
-        item2: "pack of bandages"
-
-      detective:
-        prompts: ["You enter the forest where you believe the criminal you're searching for fled to. Suddenly"]
-
-        item1: "pistol"
-        item2: "police badge"
-
-      spy:
-        prompts: ["You listen to the russian diplomats and hear them discussing"]
-
-        item1: "concealed pistol"
-        item2: "syringe of poison"
-
-  apocalyptic:
-    description: " trying to survive in a post apocalyptic world by scavenging among the ruins of what is left. "
-
-    characters:
-
-      soldier:
-        prompts: ["You have lived in this military bunker since the bombs went off. You wake up and report for duty to your commanding officer and"]
-
-        item1: "automatic rifle"
-        item2: "grenade"
-
-      scavenger:
-        prompts: ["You walk for two hours and take a break. You've left your town in search of food. You look around and see "]
-
-        item1: "rusty knife"
-        item2: "canteen"
-
-      survivor:
-        prompts: ["You live in a small community of survivors who have managed to build a piece of civilization after
-        the bombs fell. You are talking to one of the leaders of the community when"]
-
-        item1: "hatchet"
-        item2: "hunting rifle"
-
-      courier:
-        prompts: ["It's a long and dangerous road from Boston to Charleston, but you're one of the only people who
-        knows the roads well enough to get your parcel of letters there. You set out in the morning and"]
-
-        item1: "parcel of letters"
-        item2: "small pistol"
-
-  zombies:
-    description: " trying to survive in a world filled with infected zombies everywhere. "
-
-    characters:
-      soldier:
-        prompts: ["Your unit lost a lot of men when the infection broke, but you've managed to keep the small town
-        you're stationed near safe for now. You look over the town and think"]
-
-        item1: "automatic rifle"
-        item2: "grenade"
-
-      survivor:
-        prompts: ["You have managed to survive several months avoiding zombies and scavenging food.
-       You cautiously enter a rundown store and hear"]
-
-        item1: "pistol"
-        item2: "backpack"
-
-      scientist:
-        prompts: ["You pound your fist on the table angry that you still haven't found the cure to the infection. You turn to your assistant and"]
-
-        item1: "backpack"
-        item2: "solar powered tablet"
-
-
-
-
